/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
import "commontype/ClientInfo.proto";
import "commontype/TopicFilterOption.proto";
import "inboxservice/LWT.proto";

option java_multiple_files = true;
option java_package = "org.apache.bifromq.inbox.storage.proto";
option java_outer_classname = "InboxMetadataProtos";

package inboxservice;

message InboxMetadata{
  string inboxId = 1;
  uint64 incarnation = 2;
  uint64 mod = 3;
  uint64 lastActiveTime = 4;
  uint32 expirySeconds = 5;
  uint32 limit = 6;
  bool dropOldest = 7; // only work for qos0
  commontype.ClientInfo client = 8; // the owner client
  map<string, commontype.TopicFilterOption> topicFilters = 9; // subscribed topic filters
  optional LWT lwt = 10;

  uint64 qos0StartSeq = 11;
  uint64 qos0NextSeq = 12;

  uint64 sendBufferStartSeq = 13;
  uint64 sendBufferNextSeq = 14;

  optional uint64 detachedAt = 15;
}